--- a/load-generator/package.json
+++ b/load-generator/package.json
@@ -17,9 +17,7 @@
     "react-scripts": "3.3.0"
   },
   "scripts": {
-    "start": "npm-run-all --parallel reactstart webservice",
-    "reactstart":"react-scripts start",
-    "webservice":"",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
